--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.29.0"
   },
   "devDependencies": {
